k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservizi-app
  labels:
    name: microservizi-app
